# SDL2Shooter

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp  main_cpp.bak
